--- a/Vienna/Resources/de.lproj/InfoPlist.strings
+++ b/Vienna/Resources/de.lproj/InfoPlist.strings
@@ -1,3 +1,9 @@
 /* Privacy - AppleEvents Sending Usage Description */
 "NSAppleEventsUsageDescription" = "";
 
+/* (No Comment) */
+"Vienna plug-in" = "Vienna-Plug-in";
+
+/* (No Comment) */
+"Vienna style" = "Vienna-Stil";
+
