--- a/Vienna/Resources/es.lproj/Localizable.strings
+++ b/Vienna/Resources/es.lproj/Localizable.strings
@@ -126,9 +126,6 @@
 "Click the Open button to open this file." = "Haga clic en el botón Abrir para abrir este archivo.";
 
 /* No comment provided by engineer. */
-"Click the Play button to play this enclosure in iTunes." = "Haga clic en el botón Reproducir para reproducir este archivo adjunto en iTunes.";
-
-/* No comment provided by engineer. */
 "Connecting to %@" = "Conectando con %@";
 
 /* No comment provided by engineer. */
@@ -221,6 +218,9 @@
 
 /* No comment provided by engineer. */
 "Enter the URL here" = "Introduzca la URL aquí";
+
+/* Already subscribed title */
+"Error" = "Error";
 
 /* No comment provided by engineer. */
 "Error loading script '%@'" = "Error cargando script '%@'";
@@ -470,9 +470,6 @@
 
 /* No comment provided by engineer. */
 "Other" = "Otro";
-
-/* No comment provided by engineer. */
-"Play" = "Reproducir";
 
 /* No comment provided by engineer. */
 "Plugin installed" = "Plugin instalado";
