--- a/Vienna/Resources/fr.lproj/InfoPlist.strings
+++ b/Vienna/Resources/fr.lproj/InfoPlist.strings
@@ -1,3 +1,9 @@
+/* Bundle name */
+"CFBundleName" = "Vienna";
+
 /* Privacy - AppleEvents Sending Usage Description */
 "NSAppleEventsUsageDescription" = "";
+
+/* Copyright (human-readable) */
+"NSHumanReadableCopyright" = "© 2004–2019 Projet Vienna RSS";
 
