--- a/Vienna/Resources/fr.lproj/Localizable.stringsdict
+++ b/Vienna/Resources/fr.lproj/Localizable.stringsdict
@@ -77,7 +77,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>u</string>
 			<key>one</key>
-			<string>%u articles</string>
+			<string>%u article</string>
 			<key>other</key>
 			<string>%u articles</string>
 		</dict>
