--- a/Vienna/Resources/nl.lproj/InfoPlist.strings
+++ b/Vienna/Resources/nl.lproj/InfoPlist.strings
@@ -1,3 +1,9 @@
 /* Privacy - AppleEvents Sending Usage Description */
 "NSAppleEventsUsageDescription" = "";
 
+/* (No Comment) */
+"Vienna plug-in" = "Vienna-plug-in";
+
+/* (No Comment) */
+"Vienna style" = "Vienna-stijl";
+
